--- a/src/Components/SidebarSection/Sidebar.css
+++ b/src/Components/SidebarSection/Sidebar.css
@@ -1,189 +1,179 @@
+.sidebar {
+  width: 25%;
+  background-color: #484caf;
+  height: 100vh;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  position: relative;
+  overflow: visible;
+  margin: 0;
+  padding: 0;
+}
+
 .logo {
-    max-height: 80px;
-    max-width: 110px;
-    background-color: white;
-    margin-right: 100px;
-    overflow: hidden;
-    border-radius: 10px;
+  max-height: 80px;
+  max-width: 110px;
+  background-color: white;
+  margin-right: 100px;
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 .main-logo {
-    max-height: 100%;
-    max-width: 100%;
-
-
-}
-
-.sidebar {
-    width: 25%;
-    background-color: #484caf;
-    height: 100%;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-end;
-    position: relative;
-    overflow: visible;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 ul {
-    list-style-type: none;
-    padding-inline-start: 10px;
+  list-style-type: none;
+  padding-inline-start: 10px;
 }
 
 li div {
-    width: 100%;
+  width: 100%;
 }
 
 li {
-    display: block;
-    width: 200px;
-    margin: 20px;
-    font-size: larger;
-    padding: 0 20px;
+  display: block;
+  width: 200px;
+  margin: 20px;
+  font-size: larger;
+  padding: 0 20px;
 }
 
 li :hover {
-    cursor: pointer;
-    background-color: aliceblue;
-    color: black;
-    border-radius: 15px;
+  cursor: pointer;
+  background-color: aliceblue;
+  color: black;
+  border-radius: 15px;
 }
 
 li div {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 li div i {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 .profile-bar {
-    width: 200px;
-    background-color: #3494e6;
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 10px 0 0;
-    
-   
+  width: 200px;
+  background-color: #3494e6;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 10px 0 0;
 }
-.profile-bar:hover{
-    background-color: #62a4de;
-
-
+.profile-bar:hover {
+  background-color: #62a4de;
 }
 .profile-info {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-pic {
-    max-width: 35px;
-    max-height: 35px;
-    border-radius: 50%;
+  max-width: 35px;
+  max-height: 35px;
+  border-radius: 50%;
 }
 
 .profile-bar :hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .profilepopup.top-popup {
-    position: absolute;
-    bottom: 15%;
-    right: 0;
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
-    margin-left: 60px;
-    width: 200px;
-    border-radius: 15px;
-    margin-right: 5px;
+  position: absolute;
+  bottom: 15%;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  margin-left: 60px;
+  width: 200px;
+  border-radius: 15px;
+  margin-right: 5px;
 }
 
 .profilepopup.top-popup p {
-    margin: 0;
-    padding: 5px 0;
-    /* Additional styles for the popup content */
+  margin: 0;
+  padding: 5px 0;
+  /* Additional styles for the popup content */
 }
 
 @media screen and (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
+    flex-direction: row;
+    background-color: transparent;
+  }
+  .profile-bar {
+    display: none;
+  }
+  .logo {
+    position: fixed;
+    top: 0;
+    max-width: 100%;
+    width: 100%;
+    max-height: 60px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    margin-right: 0 !important;
+    border-radius: 0;
+  }
+  .logo img {
+    width: 30%;
+  }
+  .profile-info {
+    display: none;
+  }
+  ul {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    box-sizing: border-box;
+    background-color: rgb(72, 76, 175, 0.9);
+    padding-left: 0 !important;
+    margin: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  ul li div {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
 
-    .sidebar{
-        width: 100%;
-        height: 50px;
-        position: fixed;
-        bottom: 0;
-        z-index: 100;
-        flex-direction: row;
-        background-color: transparent;
-    }
-    .profile-bar {
-        display: none;
-    }
-    .logo{
-        position: fixed;
-        top:0;
-        max-width: 100%;
-        width: 100%;
-        max-height: 60px;
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        margin-right: 0 !important;
-        border-radius:0;
-
-    }
-    .logo img{
-        width: 30%;
-
-    }
-    .profile-info {
-        display: none;
-    }
-    ul{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        display: flex;
-        box-sizing: border-box;
-        background-color: rgb(72, 76, 175, 0.9);
-        padding-left: 0 !important;
-        margin: 0 !important;;
-        margin-bottom:0 !important;;
-        
-    }
-    ul li div{
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        width: 100%;
-    }
-    
-    ul li{
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 60px;
-        margin: 0;
-        padding: 0;
-        border-radius: 0;
-    }
-    li :hover {
-        border-radius: 0;
-    }
-    ul li span{
-        display: none;
-    }
-    
-
+  ul li {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+  }
+  li :hover {
+    border-radius: 0;
+  }
+  ul li span {
+    display: none;
+  }
 }
